deyisiklik eledim ay valeh

--- a/restoran.html
+++ b/restoran.html
@@ -99,15 +99,15 @@
   <!-- Yemək Şəkilləri Bölməsi -->
   <div class="menu-section">
     <div class="menu-item">
-      <img src="yemek1.jpg" alt="Yemək 1">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Food_Gechresh_Azerbaijan_03.jpg" alt="Yemək 1">
       <p>Yemək 1</p>
     </div>
     <div class="menu-item">
-      <img src="yemek2.jpg" alt="Yemək 2">
+      <img src="https://publika.az/storage/2017/07/03/kabab.jpg" alt="Yemək 2">
       <p>Yemək 2</p>
     </div>
     <div class="menu-item">
-      <img src="yemek3.jpg" alt="Yemək 3">
+      <img src="https://publika.az/storage/2017/07/03/kabab.jpg" alt="Yemək 3">
       <p>Yemək 3</p>
     </div>
     <!-- Buraya əlavə yeməklər əlavə edə bilərsən -->
